Add endpoint to update profile picture
